--- a/STM_CAN_BootLoader.ioc
+++ b/STM_CAN_BootLoader.ioc
@@ -68,6 +68,7 @@ NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
